# SimpleNumericalLibrary

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile  Doxyfile.in
doc/html/: annotated.html  classDirectSolver-members.html  classDirectSolver.html  classIterativeSolver-members.html  classIterativeSolver.html  classMatrix-members.html  classMatrix.html  functions.html  functions_func.html  hierarchy.html  index.html  search.idx  search.php
doc/latex/: annotated.tex  classDirectSolver.tex  classIterativeSolver.tex  classMatrix.tex  doxygen.sty  hierarchy.tex  refman.tex
src/: DirectSolver.cpp  DirectSolver.h  Function.h  GaussQuadrature.cpp  GaussQuadrature.h  IdentityMatrix.cpp  IdentityMatrix.h  IterativeSolver.cpp  IterativeSolver.h  Matrix.cpp  Matrix.h  MatrixFileHandler.cpp  MatrixFileHandler.h  NonLinearSolver.cpp  NonLinearSolver.h  RootFinder.cpp  RootFinder.h  TridiagonalMatrix.cpp  TridiagonalMatrix.h  TridiagonalSolver.cpp  TridiagonalSolver.h  Vector.cpp  Vector.h  VectorFileHandler.cpp  VectorFileHandler.h  util.h
tests/: CMakeLists.txt  tests.cpp
